# advanced-python-coding

./: .pre-commit-config.yaml  README.md  design_patterns.md  pyproject.toml
argument_parsing/: 1_argparse.py  2_getopt.py  aug_parsing.py  file.txt  myfile.txt
decorator/: 1_logging.py  2_timing.py  decorator.py  logfile.txt
design_pattern_composite/: composite.py
design_pattern_factory/: factory.py
design_pattern_proxy/: proxy.py
design_pattern_singleton/: singleton.py
dunder/: dunder.py
encapsulation/: encapsulation.py
generator/: 1_infinite_seq.py  generator.py
notebooks/: 1_data_structures.ipynb  2_iterables_iterators.ipynb  3_functions_lambda.ipynb  4_numpy_pandas.ipynb
type_hinting/: type_hinting.py
