[tool.poetry]
name = "advanced-python-coding"
version = "0.1.0"
description = ""
authors = ["Siqi Li <lisiqi9347@gmail.com>"]
readme = "README.md"
packages = [{include = "advanced_python_coding"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
mypy = "^1.11.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
